@@ -17,15 +17,10 @@
 
 package com.crowsofwar.avatar.common.entity;
 
-import static com.crowsofwar.avatar.common.bending.StatusControl.THROW_WATER;
-
-import java.util.Random;
-
 import com.crowsofwar.avatar.common.data.BendingData;
 import com.crowsofwar.avatar.common.data.ctx.Bender;
 import com.crowsofwar.avatar.common.entity.data.WaterArcBehavior;
 import com.crowsofwar.gorecore.util.Vector;
-
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.SoundEvents;
@@ -35,6 +30,10 @@ import net.minecraft.util.EnumParticleTypes;
 import net.minecraft.util.SoundCategory;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
+
+import java.util.Random;
+
+import static com.crowsofwar.avatar.common.bending.StatusControl.THROW_WATER;
 
 public class EntityWaterArc extends EntityArc {
 	
@@ -207,7 +206,7 @@ public class EntityWaterArc extends EntityArc {
 		}
 		return true;
 	}
-	
+
 	public static class WaterControlPoint extends ControlPoint {
 		
 		public WaterControlPoint(EntityArc arc, float size, double x, double y, double z) {
