@@ -11,3 +11,4 @@ AV2 Changelog :: version a4.5
 > Fix bug where fireball keeps exploding when held on ground
 > Fix issue when executing certain commands on server
 > Fix fire arc making fires when player-controlled
+> Fix fire/water arc StatCtrls not removed on relog
